--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Welcome to Invesco’s documentation! &#8212; Invesco-QA-Automation 0.1 documentation</title>
-    <link rel="stylesheet" href="https://github.com/hiddenbots/qa_automation/blob/master/_static/bizstyle.css" type="text/css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/qa_automation/blob/master/_static/bizstyle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     
     <script type="text/javascript" id="documentation_options" data-url_root="./" src="_https://github.com/hiddenbots/qa_automation/blob/master/_static/documentation_options.js"></script>
-    <script type="text/javascript" src="https://github.com/hiddenbots/qa_automation/blob/master/_static/jquery.js"></script>
-    <script type="text/javascript" src="https://github.com/hiddenbots/qa_automation/blob/master/_static/underscore.js"></script>
-    <script type="text/javascript" src="https://github.com/hiddenbots/qa_automation/blob/master/_static/doctools.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/hiddenbots/qa_automation/blob/master/_static/jquery.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/hiddenbots/qa_automation/blob/master/_static/underscore.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/hiddenbots/qa_automation/blob/master/_static/doctools.js"></script>
     <script type="text/javascript" src="https://github.com/hiddenbots/qa_automation/blob/master/_static/language_data.js"></script>
     <script type="text/javascript" src="https://github.com/hiddenbots/qa_automation/blob/master/_static/bizstyle.js"></script>
     <link rel="index" title="Index" href="https://github.com/hiddenbots/qa_automation/blob/master/genindex.html" />
